# coR

./: .gitignore  Makefile  README.md  meson.build
forInstall/: coR.desktop
src/: coRInputs.c  coRInputs.h  coRLayerSurface.c  coRLayerSurface.h  coROutput.c  coROutput.h  coRState.h  coRSurface.c  coRSurface.h  coRXSurface.c  coRXSurface.h  coRXdgSurface.c  coRXdgSurface.h  coRXdgTopLevel.c  coRXdgTopLevel.h  main.c  mainB1.c  mainB2.c  mainB3.c  mainV1.c  mainV2.c
src/inputs/: coRCursor.c  coRCursor.h  coRInputs.c  coRInputs.h  coRKeyboard.c  coRKeyboard.h
